# midas-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: __init__.py  settings.py
deploy/: README.md
scripts/: generate_synthetic_data.py
src/: main.py
src/analysis/: __init__.py  dxy.py  indicators.py  liquidity.py  macro.py  mtf_analysis.py  news_filter.py  pre_trade.py  regime.py  session_filter.py
src/backtesting/: __init__.py  engine.py  optimizer.py  walk_forward.py
src/broker/: __init__.py  mt5.py  mt5_manager.py  protocol.py  sim.py
src/compliance/: __init__.py  audit.py
src/core/: __init__.py  database.py  exceptions.py  logger.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  tick_ingestion.py
src/execution/: __init__.py  algos.py
src/ml/: __init__.py  advanced_indicators.py  data_loader.py  deep_learning.py  drift.py  feature_engineering.py  feature_selection.py  features.py  indicators.py  kaggle_loader.py  models.py  signal_generator.py  signal_predictor.py  train.py  tuning.py
src/notifications/: __init__.py  discord_bot.py  telegram.py  telegram_bot.py
src/portfolio/: __init__.py  sizing.py
src/reconciliation/: __init__.py  sync.py
src/risk/: __init__.py  capital_tiering.py  governor.py  independent_risk.py  shadow_mode.py
src/strategy/: __init__.py  protocol.py  signals.py  styled_signal_generator.py  styles.py  trading_styles.py  xauusd_strategy.py
tests/: conftest.py  test_p0_quant.py  test_p0_smoke.py  test_p1_reconciliation.py  test_p1_risk_governor.py  test_p1_settings.py  test_p2_drift.py  test_p2_feature_selection.py  test_p2_regime.py  test_p2_walk_forward.py  test_p3_institutional.py
